# refcheck

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: run_tests.yml
src/refcheck/: bibtex.py  doi.py
test/: test.docx  test.py  test.tex
tests/: example.md  example.tex  test_doi.py
